--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Miraglia00",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
