--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.5",
+    "morgan": "^1.10.0",
     "randomstring": "^1.1.5",
     "uuid": "^7.0.2"
   },
