--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "NodeJS Server",
   "main": "app.js",
   "scripts": {
-    "devStart": "nodemon app.js",
-    "prodStart": "pm2 start app.js --watch",
+    "dev": "nodemon app.js",
+    "prod": "pm2 start app.js --watch",
     "stop": "pm2 stop app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
