--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "heroku": "^7.39.5",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "pm2": "^4.3.1",
