--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
-    "prod": "pm2 start app.js --watch",
+    "start": "pm2 start app.js --watch",
     "stop": "pm2 stop app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
