--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "heroku": "^7.39.5",
+    "localize-joi": "^1.3.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "pm2": "^4.3.1",
     "randomstring": "^1.1.5",
-    "uuid": "^7.0.2"
+    "request": "^2.88.2",
+    "uuid": "^7.0.3",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
