--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pm2": "^4.3.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.2",
