--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.2",
+    "email-templates": "^7.0.4",
+    "email-templates-v2": "^2.0.3",
     "express": "^4.17.1",
     "heroku": "^7.39.5",
     "localize-joi": "^1.3.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
-    "nodemailer-express-handlebars": "^4.0.0",
     "pm2": "^4.3.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.2",
