--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "email-templates": "^7.0.4",
     "email-templates-v2": "^2.0.3",
     "express": "^4.17.1",
+    "googleapis": "^49.0.0",
     "heroku": "^7.39.5",
     "localize-joi": "^1.3.1",
     "mongoose": "^5.9.5",
