--- a/package.json
+++ b/package.json
@@ -20,17 +20,16 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "email-templates": "^7.0.4",
-    "email-templates-v2": "^2.0.3",
     "express": "^4.17.1",
     "googleapis": "^49.0.0",
     "heroku": "^7.39.5",
-    "localize-joi": "^1.3.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
     "pm2": "^4.3.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.2",
+    "underscore": "^1.10.2",
     "uuid": "^7.0.3",
     "uuidv4": "^6.0.7"
   },
